--- a/www/css/main.css
+++ b/www/css/main.css
@@ -11,8 +11,41 @@
 }
 
 body {
-	background: url(../img/bg.jpg);
-	background-size:cover;
+	background: #FFF;
+}
+.add-on label{
+    min-width: 75px!important;
+}
+.add-on input{
+    min-width: 200px!important;
+}
+#loading{
+  padding: 0;
+  margin: 0;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 100000;
+  background-color: #E5EFF1;
+}
+
+#loader{
+    border: 10px solid #E5EFF1;
+    width: 120px;
+    height: 120px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25%;
+    border-radius: 60px;
+    border-left-color: #3498db;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 .text-white {
