--- a/platforms/browser/www/css/main.css
+++ b/platforms/browser/www/css/main.css
@@ -9,10 +9,73 @@
     font-style: normal;
 
 }
-
+.severity-picker-toolbar{
+    border-radius: 0px!important;
+}
+.severity-picker{
+    border-radius: 0px!important;
+}
+.severity-picker button{
+    border-radius: 0px!important;
+    text-align: center;
+    padding: 0!important;
+    height: 27px!important;
+    width: 27px!important;
+}
+#inspection_details{
+    font-size: 0.8em;
+    text-align: right;
+}
+.btn-round{
+    border-radius: 10px;
+}
+.shadow{
+    -webkit-box-shadow: 0px 2px 15px -5px rgba(0,0,0,0.78);
+    -moz-box-shadow: 0px 2px 15px -5px rgba(0,0,0,0.78);
+    box-shadow: 0px 2px 15px -5px rgba(0,0,0,0.78);
+}
+.capitalize{
+     text-transform:capitalize!important;
+}
 body {
-	background: url(../img/bg.jpg);
-	background-size:cover;
+	background: #FFF;
+}
+.add-on label{
+    min-width: 75px!important;
+}
+.add-on input{
+    min-width: 200px!important;
+}
+.navbar-link{
+	font-size:1.6em;
+}
+#loading{
+  padding: 0;
+  margin: 0;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 100000;
+  background-color: #E5EFF1;
+}
+
+#loader{
+    border: 10px solid #E5EFF1;
+    width: 120px;
+    height: 120px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25%;
+    border-radius: 60px;
+    border-left-color: #3498db;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 .text-white {
@@ -128,11 +191,7 @@ body {
 .titulo{
   margin-bottom: -30px;
 }
-.btn-round{
-  padding: 6px!important;
-  width: 30px;
-  border-radius: 14px;
-}
+
 .my-form{
     margin-bottom: 0px!important;
 }
